crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__10-03.snap
---
source: rust/crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": "Ruth",
            "role": "Target_Child",
            "speaker_code": "CHI"
          },
          {
            "name": "Chiat",
            "role": "Investigator",
            "speaker_code": "INV"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "10;03.",
        "corpus": "chiat",
        "language": "eng",
        "role": "Target_Child",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "chiat",
        "language": "eng",
        "role": "Investigator",
        "speaker": "INV",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "duː",
                  "type": "text"
                }
              ],
              "raw_text": "duː",
              "span": {
                "end": 184,
                "start": 180
              },
              "type": "word"
            },
            {
              "duration": {
                "type": "short"
              },
              "type": "pause"
            },
            {
              "content": [
                {
                  "content": "us",
                  "type": "text"
                }
              ],
              "raw_text": "us",
              "span": {
                "end": 191,
                "start": 189
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "go",
                  "type": "text"
                }
              ],
              "raw_text": "go",
              "span": {
                "end": 194,
                "start": 192
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "on",
                  "type": "text"
                }
              ],
              "raw_text": "on",
              "span": {
                "end": 197,
                "start": 195
              },
              "type": "word"
            },
            {
              "content": [
                {
                  "content": "sunday",
                  "type": "text"
                }
              ],
              "raw_text": "sunday",
              "span": {
                "end": 204,
                "start": 198
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "10;03.",
        "corpus": "chiat",
        "language": "eng",
        "role": "Target_Child",
        "speaker": "CHI"
      },
      "name": "Ruth",
      "role": "Target_Child"
    },
    "INV": {
      "birth_date": null,
      "code": "INV",
      "id": {
        "corpus": "chiat",
        "language": "eng",
        "role": "Investigator",
        "speaker": "INV"
      },
      "name": "Chiat",
      "role": "Investigator"
    }
  }
}
